data/all_generated_tests/raw_wast_tests/loop_StackCorruption_358.wast
;; 9. **Test Premature Loop Exit with Incomplete Stack Maintenance**:    - Implement a loop that exits prematurely with a branch instruction without fully processing the intended stack operations. Validate the resultant stack state.    - **Constraint**: Proper balance between loop logic and stack maintenance despite premature exit conditions.    - **Relation to Stack Corruption**: Incomplete stack operations before loop exit can result in underflow or corrupted stack data.

(assert_invalid
  (module
    (func $premature-loop-exit-stack-maintenance
      (block (i32.const 5) (loop (result i32)
        (i32.const 1)
        br 1
        drop
      ))
    )
  )
  "type mismatch"
)